// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "too_small",
      "exact": false,
      "inclusive": false,
      "message": "Number must be greater than 0",
      "minimum": 0,
      "path": [
        "logNumber",
      ],
      "type": "number",
    },
    {
      "code": "invalid_string",
      "message": "Invalid",
      "path": [
        "entryTime",
        "date",
      ],
      "validation": "regex",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received boolean",
      "path": [
        "bottomTime",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "duration",
      ],
      "received": "string",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "maxDepth",
        "depth",
      ],
      "type": "number",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'm' | 'ft', received 'fathoms'",
      "options": [
        "m",
        "ft",
      ],
      "path": [
        "maxDepth",
        "unit",
      ],
      "received": "fathoms",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "notes",
      ],
      "received": "number",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "entryTime",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "duration",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the request body is missing required fields 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "entryTime",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "duration",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when creating log entries will return a 400 response if the site ID cannot be found 1`] = `"Dive site with ID "37a214f6-6167-4468-947d-b3171a0425fd" not found."`;

exports[`Log entries E2E tests when fetching recent dive sites will allow admins to query the most recent dive sites for any user 1`] = `
[
  {
    "id": "5b125836-5b5b-4ccc-a56e-58891f8bebfc",
    "name": "alert awesome intuition",
  },
  {
    "id": "4e87dc06-4d51-4d11-ba93-37e51924ff44",
    "name": "deadly lean mobile",
  },
  {
    "id": "f92f8727-7c36-46bf-b282-8f02f9ebe968",
    "name": "gloomy acceptable hummus",
  },
  {
    "id": "f991d081-5092-4a31-a256-c1a1bd55aab5",
    "name": "humming past mathematics",
  },
  {
    "id": "7737963a-bf8b-44ee-955f-066a098ef80b",
    "name": "ideal blond spume",
  },
  {
    "id": "2c8f33c5-8775-4a84-906b-bbf218b176fd",
    "name": "lost profuse garlic",
  },
  {
    "id": "3f760648-6dd0-4fa9-a023-7bc393a1ac44",
    "name": "ringed regal temporary",
  },
  {
    "id": "90bcafd4-90b6-41d5-9b70-db36b470dcaf",
    "name": "shameful glorious noodles",
  },
  {
    "id": "92c546b4-b354-4435-a233-ff3ed2c311a9",
    "name": "squeaky scaly sled",
  },
  {
    "id": "58f628bf-dc5e-449e-8ee0-7248d1abff26",
    "name": "utter extraneous calm",
  },
]
`;

exports[`Log entries E2E tests when fetching recent dive sites will return a 400 response if query string is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "count",
      ],
      "received": "nan",
    },
  ],
}
`;

exports[`Log entries E2E tests when fetching recent dive sites will return the most recently visited dive sites 1`] = `
[
  {
    "id": "5b125836-5b5b-4ccc-a56e-58891f8bebfc",
    "name": "alert awesome intuition",
  },
  {
    "id": "f2026af7-0f73-4fc0-b29b-491dc2846842",
    "name": "caring nutty grub",
  },
  {
    "id": "4e87dc06-4d51-4d11-ba93-37e51924ff44",
    "name": "deadly lean mobile",
  },
  {
    "id": "74aa1202-9d61-443b-b8f5-44dde5ef18d5",
    "name": "exotic warmhearted aside",
  },
  {
    "id": "f92f8727-7c36-46bf-b282-8f02f9ebe968",
    "name": "gloomy acceptable hummus",
  },
  {
    "id": "f991d081-5092-4a31-a256-c1a1bd55aab5",
    "name": "humming past mathematics",
  },
  {
    "id": "7737963a-bf8b-44ee-955f-066a098ef80b",
    "name": "ideal blond spume",
  },
  {
    "id": "15494b71-0aa7-4b90-bdf3-5770aa74a69e",
    "name": "joint bogus exit",
  },
  {
    "id": "2c8f33c5-8775-4a84-906b-bbf218b176fd",
    "name": "lost profuse garlic",
  },
  {
    "id": "3f760648-6dd0-4fa9-a023-7bc393a1ac44",
    "name": "ringed regal temporary",
  },
  {
    "id": "fac282b1-e048-4534-857c-dfef02ee9889",
    "name": "rude ajar aggradation",
  },
  {
    "id": "ca7960d0-cd3e-4dd3-80d8-f738369dbae6",
    "name": "rundown joyous put",
  },
  {
    "id": "90bcafd4-90b6-41d5-9b70-db36b470dcaf",
    "name": "shameful glorious noodles",
  },
  {
    "id": "92c546b4-b354-4435-a233-ff3ed2c311a9",
    "name": "squeaky scaly sled",
  },
  {
    "id": "58f628bf-dc5e-449e-8ee0-7248d1abff26",
    "name": "utter extraneous calm",
  },
]
`;

exports[`Log entries E2E tests when retrieving single log entries will allow an admin to view any log entry 1`] = `
{
  "air": [
    {
      "count": 2,
      "endPressure": 1120,
      "material": "al",
      "name": "drab posterior",
      "o2Percent": 34.4,
      "pressureUnit": "psi",
      "startPressure": 3310,
      "volume": 11,
      "workingPressure": 300,
    },
  ],
  "bottomTime": 13,
  "creator": {
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": "2020-02-24T22:30:50.944Z",
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "duration": 15,
  "entryTime": {
    "date": "2022-02-19T08:05:14",
    "timezone": "America/Bogota",
  },
  "id": "87e4c8da-bfaf-4e46-b061-2c26314393c4",
  "logNumber": 693,
  "maxDepth": {
    "depth": 20.82,
    "unit": "m",
  },
  "notes": "Tabesco deprimo comburo aeger cinis tepidus possimus trans cibo advenio. Vulgivagus corona adversus voco cultellus. Animadverto aestivus conservo cavus defessus vos sumo.",
  "site": {
    "averageRating": 1.43,
    "createdOn": "2024-04-10T03:49:32.952Z",
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
      "location": "West Covina",
      "logBookSharing": "private",
      "memberSince": "2020-02-24T22:30:50.944Z",
      "name": "Devin Ratke",
      "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
      "username": "Ayla.Rippin",
    },
    "depth": {
      "depth": 36.14,
      "unit": "ft",
    },
    "description": "Mollitia crebro solutio comedo velit theca cresco. Tardus una attonbitus aurum versus confero triumphus canto sumptus. Asporto dolore adaugeo censura amplus synagoga unde demoror ara commodo.",
    "directions": "Vinitor cura dapifer trado aperte statua vestigium valens. Acies consequatur quia carus. Cotidie dedico solium contigo tredecim claustrum convoco ut varietas.",
    "freeToDive": true,
    "gps": {
      "lat": 27.2481,
      "lon": -174.3613,
    },
    "id": "b51c9d49-2df1-4c9f-96bf-73a252036880",
    "location": "East Shawnhaven",
    "name": "original pitiful resource",
    "shoreAccess": false,
    "updatedOn": "2023-12-26T03:21:37.584Z",
    "waterType": "salt",
  },
}
`;

exports[`Log entries E2E tests when retrieving single log entries will return the requested log entry 1`] = `
{
  "air": [
    {
      "count": 2,
      "endPressure": 1120,
      "material": "al",
      "name": "drab posterior",
      "o2Percent": 34.4,
      "pressureUnit": "psi",
      "startPressure": 3310,
      "volume": 11,
      "workingPressure": 300,
    },
  ],
  "bottomTime": 13,
  "creator": {
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": "2020-02-24T22:30:50.944Z",
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "duration": 15,
  "entryTime": {
    "date": "2022-02-19T08:05:14",
    "timezone": "America/Bogota",
  },
  "id": "87e4c8da-bfaf-4e46-b061-2c26314393c4",
  "logNumber": 693,
  "maxDepth": {
    "depth": 20.82,
    "unit": "m",
  },
  "notes": "Tabesco deprimo comburo aeger cinis tepidus possimus trans cibo advenio. Vulgivagus corona adversus voco cultellus. Animadverto aestivus conservo cavus defessus vos sumo.",
  "site": {
    "averageRating": 1.43,
    "createdOn": "2024-04-10T03:49:32.952Z",
    "creator": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
      "location": "West Covina",
      "logBookSharing": "private",
      "memberSince": "2020-02-24T22:30:50.944Z",
      "name": "Devin Ratke",
      "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
      "username": "Ayla.Rippin",
    },
    "depth": {
      "depth": 36.14,
      "unit": "ft",
    },
    "description": "Mollitia crebro solutio comedo velit theca cresco. Tardus una attonbitus aurum versus confero triumphus canto sumptus. Asporto dolore adaugeo censura amplus synagoga unde demoror ara commodo.",
    "directions": "Vinitor cura dapifer trado aperte statua vestigium valens. Acies consequatur quia carus. Cotidie dedico solium contigo tredecim claustrum convoco ut varietas.",
    "freeToDive": true,
    "gps": {
      "lat": 27.2481,
      "lon": -174.3613,
    },
    "id": "b51c9d49-2df1-4c9f-96bf-73a252036880",
    "location": "East Shawnhaven",
    "name": "original pitiful resource",
    "shoreAccess": false,
    "updatedOn": "2023-12-26T03:21:37.584Z",
    "waterType": "salt",
  },
}
`;

exports[`Log entries E2E tests when searching log entries will allow a search with parameters 1`] = `
[
  {
    "air": [
      {
        "count": 1,
        "endPressure": 73.15788158518262,
        "material": "al",
        "name": "cylindrical lamb",
        "pressureUnit": "bar",
        "startPressure": 190.5539953126572,
        "volume": 18,
        "workingPressure": 300,
      },
    ],
    "entryTime": {
      "date": "2023-04-23T08:45:39",
      "timezone": "Antarctica/Syowa",
    },
    "id": "25a110b8-95bf-4bf5-9f1b-7cb9b29efd67",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 1300,
        "material": "al",
        "name": "striped backpack",
        "o2Percent": 37.1,
        "pressureUnit": "psi",
        "startPressure": 2870,
        "volume": 15,
        "workingPressure": 300,
      },
    ],
    "entryTime": {
      "date": "2023-04-30T19:39:35",
      "timezone": "America/Blanc-Sablon",
    },
    "id": "4a4e4494-e9b2-4654-9049-ba50c97aa491",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 1300,
        "material": "al",
        "name": "junior cook",
        "o2Percent": 39.2,
        "pressureUnit": "psi",
        "startPressure": 3190,
        "volume": 12,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2023-05-13T20:35:01",
      "timezone": "America/Guadeloupe",
    },
    "id": "d1a3741c-a922-4b44-994d-e1503612fa6c",
    "owner": "Ayla.Rippin",
    "site": "meaty weird good",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 42.353644190356135,
        "material": "fe",
        "name": "original cob",
        "o2Percent": 23.3,
        "pressureUnit": "bar",
        "startPressure": 238.44558839686215,
        "volume": 11,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2023-05-22T02:05:53",
      "timezone": "Antarctica/Palmer",
    },
    "id": "ce89f672-3b7e-4df7-aa6e-6b6a622fc90c",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 1060,
        "material": "fe",
        "name": "these meatball",
        "o2Percent": 27.4,
        "pressureUnit": "psi",
        "startPressure": 3190,
        "volume": 18,
        "workingPressure": 300,
      },
    ],
    "entryTime": {
      "date": "2023-06-04T11:49:34",
      "timezone": "Europe/Saratov",
    },
    "id": "4ee6c79c-8114-4abb-95b3-81d1f50bde91",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 63.94958670111373,
        "material": "fe",
        "name": "well-documented trustee",
        "pressureUnit": "bar",
        "startPressure": 237.89697324158624,
        "volume": 11,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2023-06-10T04:03:59",
      "timezone": "Antarctica/Troll",
    },
    "id": "47a62b28-fc10-4cf8-8d80-91012be86e66",
    "owner": "Ayla.Rippin",
    "site": "funny substantial strength",
  },
  {
    "air": [
      {
        "count": 2,
        "endPressure": 870,
        "material": "al",
        "name": "ajar produce",
        "o2Percent": 36.1,
        "pressureUnit": "psi",
        "startPressure": 3460,
        "volume": 18,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2023-06-16T07:34:30",
      "timezone": "Africa/Accra",
    },
    "id": "fcc765a3-bbc9-41ea-b062-40655c171bbe",
    "owner": "Ayla.Rippin",
    "site": "monumental wild standardization",
  },
  {
    "air": [
      {
        "count": 1,
        "endPressure": 930,
        "material": "fe",
        "name": "loud vitamin",
        "o2Percent": 27.8,
        "pressureUnit": "psi",
        "startPressure": 2890,
        "volume": 18,
        "workingPressure": 182,
      },
    ],
    "entryTime": {
      "date": "2023-06-21T02:07:31",
      "timezone": "Pacific/Kanton",
    },
    "id": "efcbb303-df81-42cd-930a-85878a8581a8",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will allow admins to search another user's log entries 1`] = `
[
  {
    "entryTime": {
      "date": "2024-05-12T14:22:47",
      "timezone": "America/Puerto_Rico",
    },
    "id": "b3942d4f-f3e5-4379-9b2e-b512876fa66d",
    "owner": "Ayla.Rippin",
    "site": "shameful glorious noodles",
  },
  {
    "entryTime": {
      "date": "2024-04-17T08:59:07",
      "timezone": "America/Glace_Bay",
    },
    "id": "d52b28b8-b466-4dc3-9694-de617bca8fe6",
    "owner": "Ayla.Rippin",
    "site": "gloomy acceptable hummus",
  },
  {
    "entryTime": {
      "date": "2024-04-08T06:01:51",
      "timezone": "Africa/El_Aaiun",
    },
    "id": "722e61cb-9861-482a-9b4c-c82051a73e4b",
    "owner": "Ayla.Rippin",
    "site": "ideal blond spume",
  },
  {
    "entryTime": {
      "date": "2024-04-04T15:28:47",
      "timezone": "America/Argentina/San_Juan",
    },
    "id": "f693ff53-8011-4727-88ff-a2cef4cc8145",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": {
      "date": "2024-02-10T04:11:47",
      "timezone": "America/Denver",
    },
    "id": "d67f8da5-456b-45f2-b7ba-c04b56a94672",
    "owner": "Ayla.Rippin",
    "site": "humming past mathematics",
  },
  {
    "entryTime": {
      "date": "2024-01-25T06:16:24",
      "timezone": "Atlantic/Reykjavik",
    },
    "id": "f084784f-4186-4fa9-8ab6-ac6ac0328902",
    "owner": "Ayla.Rippin",
    "site": "squeaky scaly sled",
  },
  {
    "entryTime": {
      "date": "2023-12-12T12:21:18",
      "timezone": "Australia/Sydney",
    },
    "id": "ac2204b3-8297-41e7-b33d-98256e7a1f8c",
    "owner": "Ayla.Rippin",
    "site": "lost profuse garlic",
  },
  {
    "entryTime": {
      "date": "2023-10-29T16:31:10",
      "timezone": "Asia/Omsk",
    },
    "id": "dd55f8c2-de08-4bb1-ab36-84f35809323a",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": {
      "date": "2023-10-11T01:50:41",
      "timezone": "Australia/Darwin",
    },
    "id": "cc80b995-5475-42f7-85e0-addbf8433bc7",
    "owner": "Ayla.Rippin",
    "site": "ringed regal temporary",
  },
  {
    "entryTime": {
      "date": "2023-09-25T01:58:06",
      "timezone": "Asia/Hong_Kong",
    },
    "id": "cbed40d8-a412-4082-873b-d299ea1cc14f",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": {
      "date": "2023-09-23T00:36:25",
      "timezone": "America/Argentina/Catamarca",
    },
    "id": "76860124-94a4-4efe-a1a1-a265ca1f58c2",
    "owner": "Ayla.Rippin",
    "site": "rude ajar aggradation",
  },
  {
    "entryTime": {
      "date": "2023-09-05T07:42:18",
      "timezone": "Europe/Lisbon",
    },
    "id": "869aa785-99c5-4eea-9654-6820f5f496b5",
    "owner": "Ayla.Rippin",
    "site": "caring nutty grub",
  },
  {
    "entryTime": {
      "date": "2023-08-29T18:35:23",
      "timezone": "Asia/Taipei",
    },
    "id": "328125c5-5dd7-4697-b7af-47d93ded2ad1",
    "owner": "Ayla.Rippin",
    "site": "joint bogus exit",
  },
  {
    "entryTime": {
      "date": "2023-08-27T20:00:31",
      "timezone": "Asia/Baghdad",
    },
    "id": "cbea8e84-bc25-4eb2-9390-15ca95028f2c",
    "owner": "Ayla.Rippin",
    "site": "exotic warmhearted aside",
  },
  {
    "entryTime": {
      "date": "2023-08-25T16:14:06",
      "timezone": "Europe/Belgrade",
    },
    "id": "73b26cf2-56a9-4ef2-bdcf-853790117993",
    "owner": "Ayla.Rippin",
    "site": "rundown joyous put",
  },
  {
    "entryTime": {
      "date": "2023-08-14T18:22:11",
      "timezone": "Australia/Perth",
    },
    "id": "8e90ef4e-4edd-4833-aa3b-c2e84a87b122",
    "owner": "Ayla.Rippin",
    "site": "exotic warmhearted aside",
  },
  {
    "entryTime": {
      "date": "2023-06-23T04:55:19",
      "timezone": "Australia/Eucla",
    },
    "id": "d9e75d9d-c04e-4394-8b2b-cfdb6b182664",
    "owner": "Ayla.Rippin",
    "site": "bold staid lode",
  },
  {
    "entryTime": {
      "date": "2023-06-21T02:07:31",
      "timezone": "Pacific/Kanton",
    },
    "id": "efcbb303-df81-42cd-930a-85878a8581a8",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": {
      "date": "2023-06-16T07:34:30",
      "timezone": "Africa/Accra",
    },
    "id": "fcc765a3-bbc9-41ea-b062-40655c171bbe",
    "owner": "Ayla.Rippin",
    "site": "monumental wild standardization",
  },
  {
    "entryTime": {
      "date": "2023-06-10T04:03:59",
      "timezone": "Antarctica/Troll",
    },
    "id": "47a62b28-fc10-4cf8-8d80-91012be86e66",
    "owner": "Ayla.Rippin",
    "site": "funny substantial strength",
  },
  {
    "entryTime": {
      "date": "2023-06-04T11:49:34",
      "timezone": "Europe/Saratov",
    },
    "id": "4ee6c79c-8114-4abb-95b3-81d1f50bde91",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "entryTime": {
      "date": "2023-05-22T02:05:53",
      "timezone": "Antarctica/Palmer",
    },
    "id": "ce89f672-3b7e-4df7-aa6e-6b6a622fc90c",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": {
      "date": "2023-05-13T20:35:01",
      "timezone": "America/Guadeloupe",
    },
    "id": "d1a3741c-a922-4b44-994d-e1503612fa6c",
    "owner": "Ayla.Rippin",
    "site": "meaty weird good",
  },
  {
    "entryTime": {
      "date": "2023-04-30T19:39:35",
      "timezone": "America/Blanc-Sablon",
    },
    "id": "4a4e4494-e9b2-4654-9049-ba50c97aa491",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "entryTime": {
      "date": "2023-04-23T08:45:39",
      "timezone": "Antarctica/Syowa",
    },
    "id": "25a110b8-95bf-4bf5-9f1b-7cb9b29efd67",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": {
      "date": "2023-04-22T22:33:28",
      "timezone": "Asia/Karachi",
    },
    "id": "3a3037dc-7262-461d-9155-af5991371d11",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
  {
    "entryTime": {
      "date": "2023-03-18T05:00:23",
      "timezone": "America/Argentina/San_Luis",
    },
    "id": "d400755b-7077-4bb1-8900-fba51464a4f9",
    "owner": "Ayla.Rippin",
    "site": "legal incomplete trachoma",
  },
  {
    "entryTime": {
      "date": "2023-02-25T11:28:37",
      "timezone": "Asia/Ust-Nera",
    },
    "id": "3741d273-4c27-4ddd-8829-fe7d3acd6b30",
    "owner": "Ayla.Rippin",
    "site": "scornful well-worn baggage",
  },
  {
    "entryTime": {
      "date": "2023-02-16T00:05:20",
      "timezone": "Pacific/Fiji",
    },
    "id": "8408f6e3-e043-48b1-b076-fe341651d999",
    "owner": "Ayla.Rippin",
    "site": "specific infinite chalice",
  },
  {
    "entryTime": {
      "date": "2023-01-14T17:39:26",
      "timezone": "America/Jamaica",
    },
    "id": "6cd1b748-1fc6-4d5e-a5ff-e95241526945",
    "owner": "Ayla.Rippin",
    "site": "wry boring examiner",
  },
  {
    "entryTime": {
      "date": "2022-12-25T17:00:43",
      "timezone": "Asia/Choibalsan",
    },
    "id": "760c081d-c1ee-4481-b477-2df9d880ff08",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": {
      "date": "2022-12-25T13:42:19",
      "timezone": "America/Menominee",
    },
    "id": "10883506-9d31-44da-8b67-d1c683dc3aa8",
    "owner": "Ayla.Rippin",
    "site": "damp forsaken chapter",
  },
  {
    "entryTime": {
      "date": "2022-12-12T07:14:44",
      "timezone": "America/Guatemala",
    },
    "id": "e4eb1beb-c8b0-4530-88f4-b40aaf1c9afe",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": {
      "date": "2022-11-27T22:33:34",
      "timezone": "Asia/Famagusta",
    },
    "id": "e7e6faf3-2cb5-4b84-829b-8f3d0015d332",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
  {
    "entryTime": {
      "date": "2022-11-22T05:33:27",
      "timezone": "America/Inuvik",
    },
    "id": "7aea482e-43d5-4e76-9941-6d91a035cbb7",
    "owner": "Ayla.Rippin",
    "site": "steel monthly hypothesis",
  },
  {
    "entryTime": {
      "date": "2022-11-15T17:37:04",
      "timezone": "Australia/Darwin",
    },
    "id": "1b547229-7bf2-475f-8998-146added74a5",
    "owner": "Ayla.Rippin",
    "site": "far-off critical machine",
  },
  {
    "entryTime": {
      "date": "2022-11-10T06:57:47",
      "timezone": "America/Argentina/Salta",
    },
    "id": "170e7a94-9332-4262-a99a-2eaaf2e3c2ee",
    "owner": "Ayla.Rippin",
    "site": "superior rotten pigpen",
  },
  {
    "entryTime": {
      "date": "2022-11-08T10:26:27",
      "timezone": "Asia/Vientiane",
    },
    "id": "2aed3e54-aaf4-4b05-8831-225a1f78239b",
    "owner": "Ayla.Rippin",
    "site": "yummy fitting waterwheel",
  },
  {
    "entryTime": {
      "date": "2022-10-11T03:40:15",
      "timezone": "America/Toronto",
    },
    "id": "27622d9d-222b-4bc7-b574-74c0ed2cba96",
    "owner": "Ayla.Rippin",
    "site": "whirlwind measly subset",
  },
  {
    "entryTime": {
      "date": "2022-09-29T08:51:29",
      "timezone": "America/Managua",
    },
    "id": "054c5c1e-446d-4c34-a4a3-b9bbd519b786",
    "owner": "Ayla.Rippin",
    "site": "specific dead ramen",
  },
  {
    "entryTime": {
      "date": "2022-09-26T07:47:21",
      "timezone": "America/Campo_Grande",
    },
    "id": "08ed8cd2-96ee-495a-ae94-56c74f8bb4e7",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": {
      "date": "2022-09-20T05:06:48",
      "timezone": "America/Argentina/Catamarca",
    },
    "id": "acbdee9c-19ec-4f9a-af46-60bfca53935e",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": {
      "date": "2022-09-03T10:14:29",
      "timezone": "Atlantic/Madeira",
    },
    "id": "ba40a9ab-2a34-4e79-9d89-3e0a033e6730",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2022-08-22T17:19:44",
      "timezone": "Africa/Douala",
    },
    "id": "1133048d-e523-4a00-af32-0cf91d6ae9e0",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2022-07-27T02:29:43",
      "timezone": "America/Bahia",
    },
    "id": "d4776027-8fff-46c9-bacb-0fedeb6c5612",
    "owner": "Ayla.Rippin",
    "site": "apt colossal initial",
  },
  {
    "entryTime": {
      "date": "2022-06-13T09:44:54",
      "timezone": "Asia/Novokuznetsk",
    },
    "id": "3451180c-0ca7-4fc8-aba7-383f684ff8f2",
    "owner": "Ayla.Rippin",
    "site": "humble crazy cockpit",
  },
  {
    "entryTime": {
      "date": "2022-06-11T00:40:21",
      "timezone": "Asia/Yakutsk",
    },
    "id": "aae4f4b6-23df-4a64-a7f5-a06a639f26b7",
    "owner": "Ayla.Rippin",
    "site": "old-fashioned unwieldy cartridge",
  },
  {
    "entryTime": {
      "date": "2022-06-06T23:30:33",
      "timezone": "America/Montserrat",
    },
    "id": "a2e6c3d8-2b66-4897-b0f5-f03d9dc0decc",
    "owner": "Ayla.Rippin",
    "site": "remarkable unique shoelace",
  },
  {
    "entryTime": {
      "date": "2022-05-24T20:17:49",
      "timezone": "Antarctica/Casey",
    },
    "id": "c779310e-3433-4c01-af7d-07f1934a0fb7",
    "owner": "Ayla.Rippin",
    "site": "simplistic key cupcake",
  },
  {
    "entryTime": {
      "date": "2022-05-18T21:12:33",
      "timezone": "America/Bahia",
    },
    "id": "751d71fb-bfc5-43b4-a8d2-66e42b2982c0",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will perform a basic search for log entries 1`] = `
[
  {
    "entryTime": {
      "date": "2024-05-12T14:22:47",
      "timezone": "America/Puerto_Rico",
    },
    "id": "b3942d4f-f3e5-4379-9b2e-b512876fa66d",
    "owner": "Ayla.Rippin",
    "site": "shameful glorious noodles",
  },
  {
    "entryTime": {
      "date": "2024-04-17T08:59:07",
      "timezone": "America/Glace_Bay",
    },
    "id": "d52b28b8-b466-4dc3-9694-de617bca8fe6",
    "owner": "Ayla.Rippin",
    "site": "gloomy acceptable hummus",
  },
  {
    "entryTime": {
      "date": "2024-04-08T06:01:51",
      "timezone": "Africa/El_Aaiun",
    },
    "id": "722e61cb-9861-482a-9b4c-c82051a73e4b",
    "owner": "Ayla.Rippin",
    "site": "ideal blond spume",
  },
  {
    "entryTime": {
      "date": "2024-04-04T15:28:47",
      "timezone": "America/Argentina/San_Juan",
    },
    "id": "f693ff53-8011-4727-88ff-a2cef4cc8145",
    "owner": "Ayla.Rippin",
    "site": "utter extraneous calm",
  },
  {
    "entryTime": {
      "date": "2024-02-10T04:11:47",
      "timezone": "America/Denver",
    },
    "id": "d67f8da5-456b-45f2-b7ba-c04b56a94672",
    "owner": "Ayla.Rippin",
    "site": "humming past mathematics",
  },
  {
    "entryTime": {
      "date": "2024-01-25T06:16:24",
      "timezone": "Atlantic/Reykjavik",
    },
    "id": "f084784f-4186-4fa9-8ab6-ac6ac0328902",
    "owner": "Ayla.Rippin",
    "site": "squeaky scaly sled",
  },
  {
    "entryTime": {
      "date": "2023-12-12T12:21:18",
      "timezone": "Australia/Sydney",
    },
    "id": "ac2204b3-8297-41e7-b33d-98256e7a1f8c",
    "owner": "Ayla.Rippin",
    "site": "lost profuse garlic",
  },
  {
    "entryTime": {
      "date": "2023-10-29T16:31:10",
      "timezone": "Asia/Omsk",
    },
    "id": "dd55f8c2-de08-4bb1-ab36-84f35809323a",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": {
      "date": "2023-10-11T01:50:41",
      "timezone": "Australia/Darwin",
    },
    "id": "cc80b995-5475-42f7-85e0-addbf8433bc7",
    "owner": "Ayla.Rippin",
    "site": "ringed regal temporary",
  },
  {
    "entryTime": {
      "date": "2023-09-25T01:58:06",
      "timezone": "Asia/Hong_Kong",
    },
    "id": "cbed40d8-a412-4082-873b-d299ea1cc14f",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
  {
    "entryTime": {
      "date": "2023-09-23T00:36:25",
      "timezone": "America/Argentina/Catamarca",
    },
    "id": "76860124-94a4-4efe-a1a1-a265ca1f58c2",
    "owner": "Ayla.Rippin",
    "site": "rude ajar aggradation",
  },
  {
    "entryTime": {
      "date": "2023-09-05T07:42:18",
      "timezone": "Europe/Lisbon",
    },
    "id": "869aa785-99c5-4eea-9654-6820f5f496b5",
    "owner": "Ayla.Rippin",
    "site": "caring nutty grub",
  },
  {
    "entryTime": {
      "date": "2023-08-29T18:35:23",
      "timezone": "Asia/Taipei",
    },
    "id": "328125c5-5dd7-4697-b7af-47d93ded2ad1",
    "owner": "Ayla.Rippin",
    "site": "joint bogus exit",
  },
  {
    "entryTime": {
      "date": "2023-08-27T20:00:31",
      "timezone": "Asia/Baghdad",
    },
    "id": "cbea8e84-bc25-4eb2-9390-15ca95028f2c",
    "owner": "Ayla.Rippin",
    "site": "exotic warmhearted aside",
  },
  {
    "entryTime": {
      "date": "2023-08-25T16:14:06",
      "timezone": "Europe/Belgrade",
    },
    "id": "73b26cf2-56a9-4ef2-bdcf-853790117993",
    "owner": "Ayla.Rippin",
    "site": "rundown joyous put",
  },
  {
    "entryTime": {
      "date": "2023-08-14T18:22:11",
      "timezone": "Australia/Perth",
    },
    "id": "8e90ef4e-4edd-4833-aa3b-c2e84a87b122",
    "owner": "Ayla.Rippin",
    "site": "exotic warmhearted aside",
  },
  {
    "entryTime": {
      "date": "2023-06-23T04:55:19",
      "timezone": "Australia/Eucla",
    },
    "id": "d9e75d9d-c04e-4394-8b2b-cfdb6b182664",
    "owner": "Ayla.Rippin",
    "site": "bold staid lode",
  },
  {
    "entryTime": {
      "date": "2023-06-21T02:07:31",
      "timezone": "Pacific/Kanton",
    },
    "id": "efcbb303-df81-42cd-930a-85878a8581a8",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": {
      "date": "2023-06-16T07:34:30",
      "timezone": "Africa/Accra",
    },
    "id": "fcc765a3-bbc9-41ea-b062-40655c171bbe",
    "owner": "Ayla.Rippin",
    "site": "monumental wild standardization",
  },
  {
    "entryTime": {
      "date": "2023-06-10T04:03:59",
      "timezone": "Antarctica/Troll",
    },
    "id": "47a62b28-fc10-4cf8-8d80-91012be86e66",
    "owner": "Ayla.Rippin",
    "site": "funny substantial strength",
  },
  {
    "entryTime": {
      "date": "2023-06-04T11:49:34",
      "timezone": "Europe/Saratov",
    },
    "id": "4ee6c79c-8114-4abb-95b3-81d1f50bde91",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "entryTime": {
      "date": "2023-05-22T02:05:53",
      "timezone": "Antarctica/Palmer",
    },
    "id": "ce89f672-3b7e-4df7-aa6e-6b6a622fc90c",
    "owner": "Ayla.Rippin",
    "site": "original pitiful resource",
  },
  {
    "entryTime": {
      "date": "2023-05-13T20:35:01",
      "timezone": "America/Guadeloupe",
    },
    "id": "d1a3741c-a922-4b44-994d-e1503612fa6c",
    "owner": "Ayla.Rippin",
    "site": "meaty weird good",
  },
  {
    "entryTime": {
      "date": "2023-04-30T19:39:35",
      "timezone": "America/Blanc-Sablon",
    },
    "id": "4a4e4494-e9b2-4654-9049-ba50c97aa491",
    "owner": "Ayla.Rippin",
    "site": "voluminous heartfelt imprisonment",
  },
  {
    "entryTime": {
      "date": "2023-04-23T08:45:39",
      "timezone": "Antarctica/Syowa",
    },
    "id": "25a110b8-95bf-4bf5-9f1b-7cb9b29efd67",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": {
      "date": "2023-04-22T22:33:28",
      "timezone": "Asia/Karachi",
    },
    "id": "3a3037dc-7262-461d-9155-af5991371d11",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
  {
    "entryTime": {
      "date": "2023-03-18T05:00:23",
      "timezone": "America/Argentina/San_Luis",
    },
    "id": "d400755b-7077-4bb1-8900-fba51464a4f9",
    "owner": "Ayla.Rippin",
    "site": "legal incomplete trachoma",
  },
  {
    "entryTime": {
      "date": "2023-02-25T11:28:37",
      "timezone": "Asia/Ust-Nera",
    },
    "id": "3741d273-4c27-4ddd-8829-fe7d3acd6b30",
    "owner": "Ayla.Rippin",
    "site": "scornful well-worn baggage",
  },
  {
    "entryTime": {
      "date": "2023-02-16T00:05:20",
      "timezone": "Pacific/Fiji",
    },
    "id": "8408f6e3-e043-48b1-b076-fe341651d999",
    "owner": "Ayla.Rippin",
    "site": "specific infinite chalice",
  },
  {
    "entryTime": {
      "date": "2023-01-14T17:39:26",
      "timezone": "America/Jamaica",
    },
    "id": "6cd1b748-1fc6-4d5e-a5ff-e95241526945",
    "owner": "Ayla.Rippin",
    "site": "wry boring examiner",
  },
  {
    "entryTime": {
      "date": "2022-12-25T17:00:43",
      "timezone": "Asia/Choibalsan",
    },
    "id": "760c081d-c1ee-4481-b477-2df9d880ff08",
    "owner": "Ayla.Rippin",
    "site": "bustling normal convert",
  },
  {
    "entryTime": {
      "date": "2022-12-25T13:42:19",
      "timezone": "America/Menominee",
    },
    "id": "10883506-9d31-44da-8b67-d1c683dc3aa8",
    "owner": "Ayla.Rippin",
    "site": "damp forsaken chapter",
  },
  {
    "entryTime": {
      "date": "2022-12-12T07:14:44",
      "timezone": "America/Guatemala",
    },
    "id": "e4eb1beb-c8b0-4530-88f4-b40aaf1c9afe",
    "owner": "Ayla.Rippin",
    "site": "deadly lean mobile",
  },
  {
    "entryTime": {
      "date": "2022-11-27T22:33:34",
      "timezone": "Asia/Famagusta",
    },
    "id": "e7e6faf3-2cb5-4b84-829b-8f3d0015d332",
    "owner": "Ayla.Rippin",
    "site": "giant broken meat",
  },
  {
    "entryTime": {
      "date": "2022-11-22T05:33:27",
      "timezone": "America/Inuvik",
    },
    "id": "7aea482e-43d5-4e76-9941-6d91a035cbb7",
    "owner": "Ayla.Rippin",
    "site": "steel monthly hypothesis",
  },
  {
    "entryTime": {
      "date": "2022-11-15T17:37:04",
      "timezone": "Australia/Darwin",
    },
    "id": "1b547229-7bf2-475f-8998-146added74a5",
    "owner": "Ayla.Rippin",
    "site": "far-off critical machine",
  },
  {
    "entryTime": {
      "date": "2022-11-10T06:57:47",
      "timezone": "America/Argentina/Salta",
    },
    "id": "170e7a94-9332-4262-a99a-2eaaf2e3c2ee",
    "owner": "Ayla.Rippin",
    "site": "superior rotten pigpen",
  },
  {
    "entryTime": {
      "date": "2022-11-08T10:26:27",
      "timezone": "Asia/Vientiane",
    },
    "id": "2aed3e54-aaf4-4b05-8831-225a1f78239b",
    "owner": "Ayla.Rippin",
    "site": "yummy fitting waterwheel",
  },
  {
    "entryTime": {
      "date": "2022-10-11T03:40:15",
      "timezone": "America/Toronto",
    },
    "id": "27622d9d-222b-4bc7-b574-74c0ed2cba96",
    "owner": "Ayla.Rippin",
    "site": "whirlwind measly subset",
  },
  {
    "entryTime": {
      "date": "2022-09-29T08:51:29",
      "timezone": "America/Managua",
    },
    "id": "054c5c1e-446d-4c34-a4a3-b9bbd519b786",
    "owner": "Ayla.Rippin",
    "site": "specific dead ramen",
  },
  {
    "entryTime": {
      "date": "2022-09-26T07:47:21",
      "timezone": "America/Campo_Grande",
    },
    "id": "08ed8cd2-96ee-495a-ae94-56c74f8bb4e7",
    "owner": "Ayla.Rippin",
    "site": "steep aromatic broccoli",
  },
  {
    "entryTime": {
      "date": "2022-09-20T05:06:48",
      "timezone": "America/Argentina/Catamarca",
    },
    "id": "acbdee9c-19ec-4f9a-af46-60bfca53935e",
    "owner": "Ayla.Rippin",
    "site": "good-natured bountiful relay",
  },
  {
    "entryTime": {
      "date": "2022-09-03T10:14:29",
      "timezone": "Atlantic/Madeira",
    },
    "id": "ba40a9ab-2a34-4e79-9d89-3e0a033e6730",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2022-08-22T17:19:44",
      "timezone": "Africa/Douala",
    },
    "id": "1133048d-e523-4a00-af32-0cf91d6ae9e0",
    "owner": "Ayla.Rippin",
    "site": "spotless gifted gallon",
  },
  {
    "entryTime": {
      "date": "2022-07-27T02:29:43",
      "timezone": "America/Bahia",
    },
    "id": "d4776027-8fff-46c9-bacb-0fedeb6c5612",
    "owner": "Ayla.Rippin",
    "site": "apt colossal initial",
  },
  {
    "entryTime": {
      "date": "2022-06-13T09:44:54",
      "timezone": "Asia/Novokuznetsk",
    },
    "id": "3451180c-0ca7-4fc8-aba7-383f684ff8f2",
    "owner": "Ayla.Rippin",
    "site": "humble crazy cockpit",
  },
  {
    "entryTime": {
      "date": "2022-06-11T00:40:21",
      "timezone": "Asia/Yakutsk",
    },
    "id": "aae4f4b6-23df-4a64-a7f5-a06a639f26b7",
    "owner": "Ayla.Rippin",
    "site": "old-fashioned unwieldy cartridge",
  },
  {
    "entryTime": {
      "date": "2022-06-06T23:30:33",
      "timezone": "America/Montserrat",
    },
    "id": "a2e6c3d8-2b66-4897-b0f5-f03d9dc0decc",
    "owner": "Ayla.Rippin",
    "site": "remarkable unique shoelace",
  },
  {
    "entryTime": {
      "date": "2022-05-24T20:17:49",
      "timezone": "Antarctica/Casey",
    },
    "id": "c779310e-3433-4c01-af7d-07f1934a0fb7",
    "owner": "Ayla.Rippin",
    "site": "simplistic key cupcake",
  },
  {
    "entryTime": {
      "date": "2022-05-18T21:12:33",
      "timezone": "America/Bahia",
    },
    "id": "751d71fb-bfc5-43b4-a8d2-66e42b2982c0",
    "owner": "Ayla.Rippin",
    "site": "alert awesome intuition",
  },
]
`;

exports[`Log entries E2E tests when searching log entries will return a 400 response if the query parameters are invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_date",
      "message": "Invalid date",
      "path": [
        "startDate",
      ],
    },
    {
      "code": "invalid_date",
      "message": "Invalid date",
      "path": [
        "endDate",
      ],
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "skip",
      ],
      "type": "number",
    },
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 500,
      "message": "Number must be less than or equal to 500",
      "path": [
        "limit",
      ],
      "type": "number",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'entryTime' | 'logNumber', received 'wetness'",
      "options": [
        "entryTime",
        "logNumber",
      ],
      "path": [
        "sortBy",
      ],
      "received": "wetness",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'asc' | 'desc', received 'backwards'",
      "options": [
        "asc",
        "desc",
      ],
      "path": [
        "sortOrder",
      ],
      "received": "backwards",
    },
  ],
}
`;

exports[`Log entries E2E tests when searching log entries will return a 400 response if the start date comes after the end date in the query string 1`] = `
{
  "issues": [
    {
      "code": "custom",
      "message": "Start date must be before end date.",
      "path": [],
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "too_small",
      "exact": false,
      "inclusive": false,
      "message": "Number must be greater than 0",
      "minimum": 0,
      "path": [
        "logNumber",
      ],
      "type": "number",
    },
    {
      "code": "invalid_string",
      "message": "Invalid",
      "path": [
        "entryTime",
        "date",
      ],
      "validation": "regex",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received boolean",
      "path": [
        "bottomTime",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "duration",
      ],
      "received": "string",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "maxDepth",
        "depth",
      ],
      "type": "number",
    },
    {
      "code": "invalid_enum_value",
      "message": "Invalid enum value. Expected 'm' | 'ft', received 'fathoms'",
      "options": [
        "m",
        "ft",
      ],
      "path": [
        "maxDepth",
        "unit",
      ],
      "received": "fathoms",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "notes",
      ],
      "received": "number",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "entryTime",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "duration",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the request body is missing required fields 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "object",
      "message": "Required",
      "path": [
        "entryTime",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Required",
      "path": [
        "duration",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Log entries E2E tests when updating an existing log entry will return a 400 response if the site ID cannot be found 1`] = `"Dive site with ID "e637a808-90cb-4fba-823e-35cd1898ee4a" not found."`;
